// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


// TODO:
//  - determine how anon participants should be handled
//  - decide if encounter_participant should only be e.id + p.id
//      and add a new e_a_participant table consisitng of e_a.id and p.id.
//      This would allow for more granular relationships between these elements.Enum
//  - Add tables to describe sexual health tracking. This may include...
//      - tests taken
//      - test results
//      - testing site
//      - dates of test and results
//      - a way to track when taking DoxyPEP
//      - a way to track missed PrEP doses (medication tracking is a future milestone)
//  - Add more stuff to this list...


// ENUMS:

Enum event_type {
    sexual
    clinical
    medical
}

Enum test_results {
    positive
    negative
    inconclusive
}

Enum test_type {
    hiv
    chlamydia
    gonorrhea
    syphilis
    hiv_pep
    prp
    other
}

// TABLES:

Table event {
    id integer [pk, increment]
    date timestamp [not null]
    created_at timestamp [not null]
    last_modified timestamp [not null]
    event_type event_type [not null]
    location_id integer [ref: > location.id]
    notes text
}

Table sexual_activity {
    id integer [pk, increment]
    event_id integer [not null, ref: > event.id]
    activity_id integer [not null, ref: > sexual_activity_type.id]
}

Table sexual_activity_type {
    id integer [pk, increment]
    name varchar [not null]
    min_participants integer [default: 0]
    max_participants integer [default: 0]
    display_character varchar [default: '']
    is_risky bool [default: false]
}

Table clinical_activity {
    id integer [pk, increment]
    event_id integer [not null, ref: > event.id]
    test_id integer [not null, ref: > health_test.id]
    result test_results
}

Table health_test {
    id integer [pk, increment]
    test_type test_type [not null] // Type of STI/D test
    notes text // Additional test details
}

Table event_participant {
    id integer [pk, increment]
    event_id integer [not null, ref: > event.id]
    person_id integer [not null, ref: > person.id]
}

Table sexual_activity_participant {
    id integer [pk, increment]
    sexual_activity_id integer [not null, ref: > sexual_activity.id]
    person_id integer [not null, ref: > person.id]
}

Table clinical_activity_participant {
    id integer [pk, increment]
    clinical_activity_id integer [not null, ref: > clinical_activity.id]
    person_id integer [not null, ref: > person.id]
}

Table person {
    id integer [pk, increment]
    first_name varchar
    last_name varchar
    nickname varchar
    location_id integer [ref: > location.id]
    // TODO: decide on what extra info about a person we want
}

Table person_contact {
    id integer [pk, increment]
    person_id integner [not null, ref: > person.id]
    // TODO: add rows here to store contact info
}

Table address {
    id integer [pk, increment]
    line_1 varchar [not null]
    line_2 varchar
    city varchar [not null]
    state varchar [not null]
    zip varchar [not null]

    indexes {
        (line_1, line_2, city, state, zip) [unique]
    }
}

Table coordinate {
    id integer [pk, increment]
    lat float [not null]
    long float [not null]

    indexes {
        (lat, long) [unique]
    }
}

Table location {
    id integer [pk, increment]
    address_id integer [ref: > address.id]
    coordinate_id integer [ref: > coordinate.id]
    nickname varchar [unique]
}

<!-- TODO: Medication tracking is a future milestone. Add table when ready. -->

Table health_test {
    id integer [pk, increment]
}
